# causal-agent-replay

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
RESEARCH/: phase_0_foundations.md  phase_3_attribution.md  phase_5_adapters.md  phase_6_benchmark.md
docs/: _config.yml  blog.md  index.md  writeup.md
examples/: demo_report.html  gallery.md
examples/support_agent/: __init__.py
paper/: main.tex
scripts/: make_demo.py  record.py  whowhen_pilot.py  whowhen_report.py  whowhen_run.py
src/car/: cli.py  config.py  synthetic.py
src/car/adapters/: __init__.py  langgraph.py  openai_agents.py
src/car/attribute/: contrastive.py  effects.py  sampling.py  shapley.py
src/car/bench/: __init__.py  attribute_log.py  surrogate.py  whowhen.py
src/car/budget/: budget.py
src/car/outcome/: functions.py
src/car/record/: recorder.py  toolloop.py
src/car/replay/: deterministic.py  forward.py  intervene.py
src/car/schemas/: intervention.py  scm.py  trajectory.py
src/car/store/: store.py
src/car/viz/: html.py
tests/: scm_fixtures.py  synthetic_scms.py  test_attribution.py  test_bench.py  test_deterministic_replay.py  test_effects.py  test_intervention.py  test_langgraph_adapter.py  test_openai_agents_adapter.py  test_openai_compat.py  test_sampling.py  test_schemas.py  test_store.py  test_viz.py
